# docs/swagger.yaml
@@ -283,6 +283,40 @@ paths:
       summary: Get Movie Lists
       tags:
       - movies
+  /api/movies/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get movie details by ID.
+      parameters:
+      - description: API Key
+        in: header
+        name: x-api-key
+        required: true
+        type: string
+      - description: Movie ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.MovieWithFiles'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.ErrorResponse'
+      summary: Get Movie Details by ID
+      tags:
+      - movies
   /api/movies/{tmdb_id}/stream:
     get:
       consumes:
